# serializer version: 1
# name: TestHopperCostEqual.test_snapshot
  1.24938878439752
# ---
# name: TestHopperCostEqual.test_snapshot.1
  0.003585979199114
# ---
# name: TestHopperCostEqual.test_snapshot.10
  0.004267649888486
# ---
# name: TestHopperCostEqual.test_snapshot.100
  0.003103482700046
# ---
# name: TestHopperCostEqual.test_snapshot.101
  0.993802666204776
# ---
# name: TestHopperCostEqual.test_snapshot.102
  False
# ---
# name: TestHopperCostEqual.test_snapshot.103
  False
# ---
# name: TestHopperCostEqual.test_snapshot.104
  dict({
    'cost_ctrl': 0.000512296795845,
    'cost_velocity': 0.993802666204776,
    'penalty_health': 0.0,
    'reference': 1.0,
    'reference_error': -0.996896517299954,
    'state_of_interest': 0.003103482700046,
    'x_position': 0.001938642253477,
    'x_velocity': 0.003103482700046,
  })
# ---
# name: TestHopperCostEqual.test_snapshot.11
  1.0
# ---
# name: TestHopperCostEqual.test_snapshot.12
  -1.0
# ---
# name: TestHopperCostEqual.test_snapshot.13
  0.0
# ---
# name: TestHopperCostEqual.test_snapshot.14
  dict({
    'cost_ctrl': 0.0,
    'cost_velocity': 1.0,
    'penalty_health': 0.0,
    'reference': 1.0,
    'reference_error': -1.0,
    'state_of_interest': 0.0,
  })
# ---
# name: TestHopperCostEqual.test_snapshot.15
  1.249019542118379
# ---
# name: TestHopperCostEqual.test_snapshot.16
  0.003290470306044
# ---
# name: TestHopperCostEqual.test_snapshot.17
  0.001973721377145
# ---
# name: TestHopperCostEqual.test_snapshot.18
  -0.004937660081069
# ---
# name: TestHopperCostEqual.test_snapshot.19
  0.008947511525957
# ---
# name: TestHopperCostEqual.test_snapshot.2
  0.001973680290594
# ---
# name: TestHopperCostEqual.test_snapshot.20
  0.00473604556536
# ---
# name: TestHopperCostEqual.test_snapshot.21
  -0.095162708356803
# ---
# name: TestHopperCostEqual.test_snapshot.22
  -0.070213665118115
# ---
# name: TestHopperCostEqual.test_snapshot.23
  0.000389068122576
# ---
# name: TestHopperCostEqual.test_snapshot.24
  -0.218221840230365
# ---
# name: TestHopperCostEqual.test_snapshot.25
  1.042277217248476
# ---
# name: TestHopperCostEqual.test_snapshot.26
  1.0
# ---
# name: TestHopperCostEqual.test_snapshot.27
  -0.99631848412087
# ---
# name: TestHopperCostEqual.test_snapshot.28
  0.00368151587913
# ---
# name: TestHopperCostEqual.test_snapshot.29
  0.992650521800909
# ---
# name: TestHopperCostEqual.test_snapshot.3
  -0.004058226521124
# ---
# name: TestHopperCostEqual.test_snapshot.30
  False
# ---
# name: TestHopperCostEqual.test_snapshot.31
  False
# ---
# name: TestHopperCostEqual.test_snapshot.32
  dict({
    'cost_ctrl': 0.000829521000385,
    'cost_velocity': 0.992650521800909,
    'penalty_health': 0.0,
    'reference': 1.0,
    'reference_error': -0.99631848412087,
    'state_of_interest': 0.00368151587913,
    'x_position': 0.002769012612593,
    'x_velocity': 0.00368151587913,
  })
# ---
# name: TestHopperCostEqual.test_snapshot.33
  1.247873463762235
# ---
# name: TestHopperCostEqual.test_snapshot.34
  0.000747362398321
# ---
# name: TestHopperCostEqual.test_snapshot.35
  0.001956169414354
# ---
# name: TestHopperCostEqual.test_snapshot.36
  -0.011294319461684
# ---
# name: TestHopperCostEqual.test_snapshot.37
  0.022963563189578
# ---
# name: TestHopperCostEqual.test_snapshot.38
  -0.071704571059511
# ---
# name: TestHopperCostEqual.test_snapshot.39
  -0.191876008309246
# ---
# name: TestHopperCostEqual.test_snapshot.4
  0.004756223516368
# ---
# name: TestHopperCostEqual.test_snapshot.40
  -0.564581954637012
# ---
# name: TestHopperCostEqual.test_snapshot.41
  -0.004124095086138
# ---
# name: TestHopperCostEqual.test_snapshot.42
  -1.369612217924426
# ---
# name: TestHopperCostEqual.test_snapshot.43
  2.459741860781004
# ---
# name: TestHopperCostEqual.test_snapshot.44
  1.0
# ---
# name: TestHopperCostEqual.test_snapshot.45
  -1.033541429197481
# ---
# name: TestHopperCostEqual.test_snapshot.46
  -0.033541429197481
# ---
# name: TestHopperCostEqual.test_snapshot.47
  1.068207885867572
# ---
# name: TestHopperCostEqual.test_snapshot.48
  False
# ---
# name: TestHopperCostEqual.test_snapshot.49
  False
# ---
# name: TestHopperCostEqual.test_snapshot.5
  0.002611397019904
# ---
# name: TestHopperCostEqual.test_snapshot.50
  dict({
    'cost_ctrl': 0.001719451189041,
    'cost_velocity': 1.068207885867572,
    'penalty_health': 0.0,
    'reference': 1.0,
    'reference_error': -1.033541429197481,
    'state_of_interest': -0.033541429197481,
    'x_position': 0.002500681179013,
    'x_velocity': -0.033541429197481,
  })
# ---
# name: TestHopperCostEqual.test_snapshot.51
  1.246081344830018
# ---
# name: TestHopperCostEqual.test_snapshot.52
  -0.002372850487616
# ---
# name: TestHopperCostEqual.test_snapshot.53
  0.001922769722725
# ---
# name: TestHopperCostEqual.test_snapshot.54
  -0.0189319538121
# ---
# name: TestHopperCostEqual.test_snapshot.55
  0.038124184311805
# ---
# name: TestHopperCostEqual.test_snapshot.56
  -0.019268016187445
# ---
# name: TestHopperCostEqual.test_snapshot.57
  -0.255705815607373
# ---
# name: TestHopperCostEqual.test_snapshot.58
  -0.215685649306068
# ---
# name: TestHopperCostEqual.test_snapshot.59
  -0.004114108057863
# ---
# name: TestHopperCostEqual.test_snapshot.6
  0.00286064305277
# ---
# name: TestHopperCostEqual.test_snapshot.60
  -0.540821839142406
# ---
# name: TestHopperCostEqual.test_snapshot.61
  1.331997939551574
# ---
# name: TestHopperCostEqual.test_snapshot.62
  1.0
# ---
# name: TestHopperCostEqual.test_snapshot.63
  -1.045460729538665
# ---
# name: TestHopperCostEqual.test_snapshot.64
  -0.045460729538665
# ---
# name: TestHopperCostEqual.test_snapshot.65
  1.092988137007517
# ---
# name: TestHopperCostEqual.test_snapshot.66
  False
# ---
# name: TestHopperCostEqual.test_snapshot.67
  False
# ---
# name: TestHopperCostEqual.test_snapshot.68
  dict({
    'cost_ctrl': 0.001153304815292,
    'cost_velocity': 1.092988137007517,
    'penalty_health': 0.0,
    'reference': 1.0,
    'reference_error': -1.045460729538665,
    'state_of_interest': -0.045460729538665,
    'x_position': 0.002136995342704,
    'x_velocity': -0.045460729538665,
  })
# ---
# name: TestHopperCostEqual.test_snapshot.69
  1.243630263743176
# ---
# name: TestHopperCostEqual.test_snapshot.7
  -0.003718863673245
# ---
# name: TestHopperCostEqual.test_snapshot.70
  -0.005111902273451
# ---
# name: TestHopperCostEqual.test_snapshot.71
  0.001377297540013
# ---
# name: TestHopperCostEqual.test_snapshot.72
  -0.024833011076831
# ---
# name: TestHopperCostEqual.test_snapshot.73
  0.053724250500705
# ---
# name: TestHopperCostEqual.test_snapshot.74
  -0.036538866722199
# ---
# name: TestHopperCostEqual.test_snapshot.75
  -0.357234677518281
# ---
# name: TestHopperCostEqual.test_snapshot.76
  -0.468951933162534
# ---
# name: TestHopperCostEqual.test_snapshot.77
  -0.132075309195334
# ---
# name: TestHopperCostEqual.test_snapshot.78
  -0.933839883057008
# ---
# name: TestHopperCostEqual.test_snapshot.79
  2.566396761741848
# ---
# name: TestHopperCostEqual.test_snapshot.8
  -0.000496140621044
# ---
# name: TestHopperCostEqual.test_snapshot.80
  1.0
# ---
# name: TestHopperCostEqual.test_snapshot.81
  -1.027897618853357
# ---
# name: TestHopperCostEqual.test_snapshot.82
  -0.027897618853357
# ---
# name: TestHopperCostEqual.test_snapshot.83
  1.056573514844402
# ---
# name: TestHopperCostEqual.test_snapshot.84
  False
# ---
# name: TestHopperCostEqual.test_snapshot.85
  False
# ---
# name: TestHopperCostEqual.test_snapshot.86
  dict({
    'cost_ctrl': 0.000805132269859,
    'cost_velocity': 1.056573514844402,
    'penalty_health': 0.0,
    'reference': 1.0,
    'reference_error': -1.027897618853357,
    'state_of_interest': -0.027897618853357,
    'x_position': 0.001913814391877,
    'x_velocity': -0.027897618853357,
  })
# ---
# name: TestHopperCostEqual.test_snapshot.87
  1.240446629093085
# ---
# name: TestHopperCostEqual.test_snapshot.88
  -0.007009570713654
# ---
# name: TestHopperCostEqual.test_snapshot.89
  0.00063868874376
# ---
# name: TestHopperCostEqual.test_snapshot.9
  -0.001292019757674
# ---
# name: TestHopperCostEqual.test_snapshot.90
  -0.028814222975504
# ---
# name: TestHopperCostEqual.test_snapshot.91
  0.073336000382737
# ---
# name: TestHopperCostEqual.test_snapshot.92
  0.042321939906796
# ---
# name: TestHopperCostEqual.test_snapshot.93
  -0.438389522933606
# ---
# name: TestHopperCostEqual.test_snapshot.94
  -0.011325669503669
# ---
# name: TestHopperCostEqual.test_snapshot.95
  -0.05914303586958
# ---
# name: TestHopperCostEqual.test_snapshot.96
  -0.061818286446394
# ---
# name: TestHopperCostEqual.test_snapshot.97
  2.337049746774442
# ---
# name: TestHopperCostEqual.test_snapshot.98
  1.0
# ---
# name: TestHopperCostEqual.test_snapshot.99
  -0.996896517299954
# ---
